--- a/index.html
+++ b/index.html
@@ -25,13 +25,26 @@
            const container = document.getElementById('products');
            products.forEach(product => {
             const item = document.createElement('p');
-           item.innerHTML = `<strong>Name: </strong> ${product.name} <strong> Price: </strong> ${product.price} <strong> Quantity: </strong> ${product.quantity}`;
+           item.innerHTML = `<strong>Name: </strong> ${product.name} <strong> Price: </strong> ${product.price} <strong> Quantity: </strong> ${product.quantity} <button onclick="deleteProduct('${product._id}')">Delete</button>`;
             container.appendChild(item);
 
            })
         })
         }
+
         loadProducts();
+        function deleteProduct(id) {
+            fetch(`/delete/${id}`,
+            {
+                method: 'DELETE'
+            })
+            .then(res => res.json())
+            .then(result => {
+                console.log("Deleted Successfully");
+            })
+            
+            
+        }
     </script>
 </body>
 </html>
