--- a/index.html
+++ b/index.html
@@ -17,22 +17,60 @@
     <div id="products">
 
     </div>
+    <div id="update">
+
+    </div>
     <script>
-        function loadProducts(){
+        function loadAllProducts(){
             fetch('/products')
         .then(res => res.json())
         .then(products => {
            const container = document.getElementById('products');
            products.forEach(product => {
             const item = document.createElement('p');
-           item.innerHTML = `<strong>Name: </strong> ${product.name} <strong> Price: </strong> ${product.price} <strong> Quantity: </strong> ${product.quantity} <button onclick="deleteProduct('${product._id}')">Delete</button>`;
+           item.innerHTML = `<strong>Name: </strong> ${product.name} <strong> Price: </strong> ${product.price} <strong> Quantity: </strong> ${product.quantity} <button onclick="loadProduct('${product._id}')">Edit</button> <button onclick="deleteProduct('${product._id}')">Delete</button>`;
             container.appendChild(item);
 
            })
         })
         }
 
-        loadProducts();
+        loadAllProducts();
+        // get
+        function loadProduct (id) {
+            fetch(`/product/${id}`)
+            .then(res => res.json())
+            .then(data => {
+              const update = document.getElementById('update');
+              update.innerHTML = `
+              <h3> Update: ${data._id}</h3>
+              <strong>Name: </strong>  <input type="text" value="${data.name}" id="name">
+              <strong> Price: </strong> <input type="text" value="${data.price}" id="price">
+              <strong> Quantity: </strong> <input type="text" value="${data.quantity}" id="quantity">
+              <button type="submit" onclick="updateProduct('${data._id}')">Submit</button>
+              `;
+               
+
+            })
+        }
+        // Update
+        function updateProduct (id) {
+            const name = document.getElementById('name').value;
+            const price = document.getElementById('price').value;
+            const quantity = document.getElementById('quantity').value;
+            const product = { id, name, price, quantity};
+            fetch(`/update/${id}`, {
+                method: 'PATCH',
+                headers: {'Content-Type': 'Application/json'},
+                body: JSON.stringify(product)
+            })
+            .then(res => res.json())
+            .then(data => {
+                console.log('updated Product')
+            })
+
+
+        }
         function deleteProduct(id) {
             fetch(`/delete/${id}`,
             {
